nav align bug

--- a/assets/css/styleview3.css
+++ b/assets/css/styleview3.css
@@ -42,6 +42,8 @@ nav {
 
 #nav-tools {
 	position: relative;
+	background-color: #c2d4d8;
+    padding-left: 55px;
 }
 
 .post img {
